# EXTRAME-PRACTICE

./: .gitignore  CMakeLists.txt  EXTRAME-PRACTICE.sln  README.md  RoomService.cpp  RoomService.h  RoomService.ui  airconditioner.sqlite  cool.csv  hot.csv  iptable.csv  iptable.xlsx  kill.sh  room_msg.csv  run.bat  run.sh  serverconfig.csv  shell.c  软件工程第二次作业.docx
.github/workflows/: cmake-single-platform.yml
EXTRAME-PRACTICE/: EXTRAME-PRACTICE.cpp  EXTRAME-PRACTICE.h  EXTRAME-PRACTICE.vcxproj
gui/: RoomService.cpp  RoomService.h  client.cpp  client.ui  gettemperaturethread.cpp  gettemperaturethread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc.qrc  ui_mainwindow.h
gui/data_manager/: main.cpp  mainwindow.cpp  mainwindow.h
gui/monitor/: MainWindow.cpp  MainWindow.h  main.cpp
gui/qss/: mainwindow.qss
gui/reception/: AirConditionDetailsWindow.cpp  AirConditionDetailsWindow.h  BillWindow.cpp  BillWindow.h  RoomService.cpp  RoomService.h  RoomService.ui
gui/room_client/: airconditioneroptthread.cpp  airconditioneroptthread.h  gettemperaturethread.h  mainwindow.cpp  mainwindow.h
sqlite/: airconditioner.sqlite  bupt.sqlite
src/: CMakeLists.txt  main.cpp
src/client/: client.cpp  client.h  client_test.cpp
src/common/: CMakeLists.txt  common.h  socket.cpp  socket.h  socket_test.cpp
src/manager/: manager.cpp  manager.h  managertest.cpp
src/server/: scheduler.cpp  scheduler.h  server_test.cpp  service.cpp  service.h  service_test.cpp
test/: client1.cpp  client2.cpp  client3.cpp  client4.cpp  client5.cpp
